--- a/doc/usman/ch-simple-modules.tex
+++ b/doc/usman/ch-simple-modules.tex
@@ -605,8 +605,8 @@ void TransportProtocol::activity()
 {
     window_size = par("window_size");
     n_s = n_r = 0;
-    eedVector.setName(''End-to-End Delay'');
-    eedStats.setName(''eedStats'');
+    eedVector.setName("End-to-End Delay");
+    eedStats.setName("eedStats");
     //...
 }
 
